# QTS-ARCHITECT

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AUDITOR_DOCUMENTATION.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  auditor_config.json  docker-compose.yml  pyproject.toml  super_agente_auditor.py  test_auditor.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  guardrails.yml
conf/: live.yaml  main.yaml
conf/dataset/: binance_btc.yaml  duckdb_local.yaml
conf/gateway/: alpaca.yaml  ccxt.yaml  mock.yaml  oanda.yaml  router.yaml
conf/model/: hmm_regime.yaml
conf/store/: memory.yaml  redis.yaml
conf/strategy/: claude_hybrid.yaml  gold_ema_rsi.yaml  ict_smc.yaml
docs/prototypes/web_prototype/: README.md  index.html  script.js  styles.css
docs/runbooks/: QTS_LOOP_SKILLS_OPERATIVO.md
qts_core/: README.md
qts_core/docs/: redis_keys.md
qts_core/docs/runbooks/: alert-relay.md  emergency-halt-and-recovery.md  live-trading-ops-checklist.md
qts_core/src/qts_core/: __init__.py  main.py  main_live.py
qts_core/src/qts_core/agents/: __init__.py  base.py  claude_agent.py  ema_rsi.py  ict.py  prediction_gate.py  protocol.py  sentiment_filter.py  signal_quality.py  supervisor.py  watchdog.py
qts_core/src/qts_core/backtest/: __init__.py  engine.py  labeling.py  metrics.py
qts_core/src/qts_core/common/: __init__.py  types.py
qts_core/src/qts_core/dashboard/: __init__.py  app.py  utils.py
qts_core/src/qts_core/data/: __init__.py  interfaces.py  loaders.py  query.py  transform.py
qts_core/src/qts_core/execution/: __init__.py  ems.py  oms.py  store.py
qts_core/src/qts_core/models/: __init__.py  regime.py
qts_core/src/qts_core/ops/: __init__.py  alert_relay.py
qts_core/src/qts_core/polymarket/: __init__.py  polymarket_agent.py  polymarket_loader.py  polymarket_oms.py  sentiment_loader.py
reports/: gold-ema-rsi-optimized-backtest.json  qts-1y-multisymbol-backtest-2026-02-26.json  qts-1y-multisymbol-backtest-2026-02-26.md  qts-1y-parameter-sweep-2026-02-26.json  qts-1y-parameter-sweep-2026-02-26.md  qts-1y-signal-sweep-phase2-2026-02-26.json  qts-1y-signal-sweep-phase2-2026-02-26.md  qts-1y-trade-frequency-sweep-2026-02-26.json  qts-1y-trade-frequency-sweep-2026-02-26.md  qts-ab-backtest-1y-2026-02-26.json  qts-ab-backtest-1y-2026-02-26.md  qts-ab-backtest-2026-02-26.json  qts-ab-backtest-2026-02-26.md  qts-backtest-BTC_USDT-90d-15m-2026-02-26.json  qts-dynamic-extreme-filter-backtest-2026-02-26.json  qts-dynamic-extreme-filter-backtest-2026-02-26.md  qts-dynamic-regime-guardrail-eval-2026-02-26.json  qts-dynamic-regime-guardrail-eval-2026-02-26.md  qts-gold-backtest-1y-2026-02-26.json  qts-gold-backtest-1y-2026-02-26.md  qts-gold-backtest-90d-15m-2026-02-26.json  qts-gold-backtest-90d-15m-2026-02-26.md  qts-gold-backtest-90d-2026-02-26.json  qts-gold-backtest-90d-2026-02-26.md  qts-gold-backtest-ny-8-11-2026-02-26.json  qts-gold-backtest-ny-8-11-2026-02-26.md  qts-gold-breakout-only-backtest-2026-02-26.json  qts-gold-breakout-only-backtest-2026-02-26.md  qts-gold-breakout-range-backtest-2026-02-26.json  qts-gold-breakout-range-backtest-2026-02-26.md  qts-gold-coinbase-xauusd-proxy-backtest-2026-02-26.json  qts-gold-coinbase-xauusd-proxy-backtest-2026-02-26.md  qts-gold-kucoin-paxg-backtest-2026-02-26.json  qts-gold-kucoin-paxg-backtest-2026-02-26.md  qts-gold-mexc-xaut-backtest-2026-02-26.json  qts-gold-mexc-xaut-backtest-2026-02-26.md  qts-gold-oanda-xauusd-backtest-2026-02-26.json  qts-gold-oanda-xauusd-backtest-2026-02-26.md  qts-gold-symbol-fit-comparison-2026-02-26.json  qts-gold-symbol-fit-comparison-2026-02-26.md  (+22 more)
scripts/: run_backtest_risk_comparison.py  run_gold_ema_rsi_backtest.py
skills/qts-architect-hardening/: SKILL.md
skills/qts-architect-hardening/references/: hardening-checklist.md
skills/qts-architect-hardening/scripts/: find_hotspots.py
tests/: test_agents.py  test_alert_relay.py  test_alpaca.py  test_backtest.py  test_claude_agents.py  test_dashboard_utils.py  test_data_freshness.py  test_data_layer.py  test_execution.py  test_ict_agent.py  test_live_flow.py  test_oanda.py  test_prediction_gate.py  test_regime.py  test_sentiment_filter.py  test_signal_quality.py  test_watchdog.py
